# dedup

./: .gitignore  README.md  app.py  balanced_frame_extractor.py  config.yaml  curation_config.agro.yaml  dedup.py  fastapi_app_agro.py  ml_curation_agro.py  pyproject.toml
bfe/: __init__.py  binning.py  deduplication.py  embeddings.py  frame_info.py  manifest.py  pipeline.py  proxies.py  quality_metrics.py  reporting.py  scoring.py  stratification.py  utils.py  video_io.py
static/css/: style.css
static/js/: main.js  results.js
templates/: index.html  results.html
tests/: test_balanced_frame_extractor.py  test_bfe.py  test_manifest.py  test_pipeline.py  test_reporting.py  test_utils.py
